# studium

./: .gitignore  README.md
Semester1/ALG/: damenproblem.ipynb  fib.c
Semester1/GDI/: 03_3.ipynb  03_ZEICHEN.ipynb
Semester1/GDI/Uebung1/: 01_03.txt  01_2.ipynb
Semester1/GDI/Uebung2/: 02_2.ipynb  02_3.ipynb
Semester1/GDI/Uebung_1/: 01_01.ipynb  01_4.ipynb
Semester1/GDI/Uebung_2/: 02_ZAHL.ipynb
Semester1/GDI/Uebung_3/: 03_01.md
Semester1/Mathematik I/: logik.ipynb  mengen.ipynb  python.ipynb  seminar1_aufgaben.ipynb  seminar2_aufgaben.ipynb  seminar3.ipynb
Semester1/Programmieren 1/: binToDec.c
Semester1/Programmieren 1/Laborarbeit/: bin  grade  grade.c  nw  nw.c  tempCodeRunnerFile  tempCodeRunnerFile.c
Semester1/Programmieren 1/Laborarbeit 3/: hanoi  hanoi.c  hanoi_avg  sieb  sieb.c
Semester1/Programmieren 1/Laborarbeit 3old/: hanoi.c  hanoi_runtimes_avg.csv  plot.py  test2.c  test_runtime.c
Semester1/Programmieren 1/Laborarbeit_1/: bin.c
Semester1/Programmieren 1/Laborarbeit_2/: add  add.c  binom  binom.c  euclid  euclid.c
Semester1/Programmieren 1/Laborarbeit_3/: README_UND_ERKLAERUNGEN.md  hanoi_avg.c
Semester1/Programmieren 1/Laborarbeit_4/: main.c  meson.build
Semester1/Programmieren 1/Laborarbeit_4/src/: linked_list.c  linked_list.h
Semester1/Programmieren 1/Uebung 5/: args  find_substr  find_substr.c  isPalindrome  isPalindrome.c  normalize  reverseInt  reverse_string
Semester1/Programmieren 1/Uebung1_und_2/: Uebung1.py  a.out  averageTwoNumbers  averageTwoNumbers.c  calculateSquareOfRectangle  convertMinutes  convertMinutes.c  (+8 more)
(+36 files in other folders)
